5.3.1-non-compliant-resource.yml
apiVersion: v1
kind: Pod
metadata:
  name: violating-pod
  namespace: default
spec:
  containers:
    - name: nginx
      image: nginx
  volumes:
    - name: invalid-csi-volume
      csi:
        # Missing "driver" field, invalid configuration
        nodePublishSecretRef:
          name: my-secret
    - name: plain-secret-volume
      secret:
        secretName: my-secret
